syntax = "proto3";

package com.coralogixapis.alerts.v3;

import "google/protobuf/wrappers.proto";
import "com/coralogixapis/alerts/v3/commons.proto";
import "com/coralogixapis/alerts/v3/alert_def_type_definition/notification_destination.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message AlertDefIncidentSettings {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Alert definition incident settings"
      required: ["retriggering_period", "notify_on"]
    }
  };
  oneof retriggering_period {
    google.protobuf.UInt32Value minutes = 100 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "10" }];
  }
  NotifyOn notify_on = 2;
}

message AlertDefNotificationGroup {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Alert definition notification group"
      required: ["group_by_keys", "webhooks", "destinations", "router"]
    }
  };
  repeated google.protobuf.StringValue group_by_keys = 1;
  repeated AlertDefWebhooksSettings webhooks = 2;
  repeated NotificationDestination destinations = 3;
  optional NotificationRouter router = 4;
}

message AlertDefWebhooksSettings {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Alert definition webhook settings"
      description: "Configuration for webhook notifications for an alert"
      required: ["retriggering_period", "notify_on", "integration"]
    }
  };
  oneof retriggering_period {
    google.protobuf.UInt32Value minutes = 100 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "10" }];
  }
   optional NotifyOn notify_on = 1;
   IntegrationType integration = 2;
}

message IntegrationType {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Integration type"
      description: "Defines the type of integration to use for notifications"
      required: ["integration_type"]
    }
  };
  oneof integration_type {
    google.protobuf.UInt32Value integration_id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "123" }];
    Recipients recipients = 3;
  }
}

message Recipients {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Recipients"
      description: "List of email recipients for alert notifications"
      required: ["emails"]
    }
  };
  repeated google.protobuf.StringValue emails = 1;
}
