syntax = "proto3";

package com.coralogixapis.alerts.v3;

import "google/protobuf/wrappers.proto";

message ShowInInsight {
  optional google.protobuf.UInt32Value retriggering_period_minutes = 1;
  optional NotifyOn notify_on = 2;
}

message AlertNotificationGroup {
  repeated google.protobuf.StringValue group_by_fields = 1;
  repeated AlertNotification notifications = 2;
}

message AlertNotification {
  //TODO: Minutes or Seconds?
   optional google.protobuf.UInt32Value retriggering_period_minutes = 1;
   optional NotifyOn notify_on = 2;
   oneof integration_type {
     google.protobuf.UInt32Value integration_id = 3;
     Recipients recipients = 5;
   }
}

message Recipients {
  repeated google.protobuf.StringValue emails = 1;
}

enum NotifyOn {
  NOTIFY_ON_TRIGGERED_ONLY_UNSPECIFIED = 0;
  NOTIFY_ON_TRIGGERED_AND_RESOLVED = 1;
}
